--- a/app/src/main/resources/languages/en.lang
+++ b/app/src/main/resources/languages/en.lang
@@ -296,6 +296,18 @@ addEdgeToVertexIdMustBeLong=The ToVertexId field must be a Long number (8 bytes)
 addEdgeWeightMustBeLong=The Weight field must be a Long number (8 bytes)
 addEdgeButton=Add
 
+ ! Rm Edge
+rmEdgeTitle=Remove an edge
+rmEdgeFromVertexIdFieldLabel=fromVertexId
+rmEdgeToVertexIdFieldLabel=toVertexId
+rmEdgeFromVertexIdAndToVertexIdCannotBeEmpty=The FromVertexId and ToVertexId fields cannot be empty
+rmEdgeFromVertexIdCannotBeEmpty=The FromVertexId field cannot be empty
+rmEdgeToVertexIdCannotBeEmpty=The ToVertexId field cannot be empty
+rmEdgeFromVertexIdAndToVertexIdMustBeLong=The FromVertexId and ToVertexId fields must be Long numbers (8 bytes)
+rmEdgeFromVertexIdMustBeLong=The FromVertexId field must be a Long number (8 bytes)
+rmEdgeToVertexIdMustBeLong=The ToVertexId field must be a Long number (8 bytes)
+rmEdgeButton=Remove
+
  ! Top Menu
 topMenuActions=Actions
 topMenuDrawGraphAgain=Draw the graph again
@@ -330,6 +342,8 @@ lowerRightMenuRmVertexButton=Remove vertex
 lowerRightMenuRmVertexIconDescription=Remove vertex icon
 lowerRightMenuAddEdgeButton=Add edge
 lowerRightMenuAddEdgeIconDescription=Add edge icon
+lowerRightMenuRmEdgeButton=Remove edge
+lowerRightMenuRmEdgeIconDescription=Remove edge icon
 lowerRightMenuGraphClearButton=Graph clear
 lowerRightMenuGraphClearIconDescription=Graph clear icon
 
